public/css/style.css
/* ... */
.section-counter .text strong.number {
    font-weight: 400;
    font-size: 40px;
    color: #fff;
}

.section-counter .text span {
    font-size: 16px;
    color: rgba(255, 255, 255, 0.7);
}

@media (max-width: 767.98px) {
    .section-counter .counter-wrap {
        margin-bottom: 20px;
    }
}

.section-counter .ftco-number {
    display: block;
    font-size: 72px;
    font-weight: bold;
    color: #009DE7;
}

.section-counter .ftco-label {
    font-size: 12px;
    text-transform: uppercase;
    letter-spacing: .1em;
}

/* width */
::-webkit-scrollbar {
    width: 7px;
}

/* Track */
::-webkit-scrollbar-track {
    box-shadow: inset 0 0 5px grey;
    border-radius: 10px;
}

/* Handle */
::-webkit-scrollbar-thumb {
    background: #35c7e0;
    border-radius: 10px;
}

/* Handle on hover */
::-webkit-scrollbar-thumb:hover {
    background: #35c7e0;
}


.store-download{
    margin-top: 30px;
}

.store-download img{
    width: 150px;
    height: auto;
}



#map{
    position: relative;
}



.contact-info-footer  li{
    margin-bottom: 10px !important;
}


.table-value{
    display: block;
    float: right;
}

/*******************RTL*******************/
.rtl, .ftco-footer-widget a {
    font-family: 'Tajawal', sans-serif;
    font-size: 18px;
}

.rtl .navbar .container, .rtl .ftco-services .container,
.rtl .doctors-list .container, .rtl .testimonial-p,
.rtl .align-self-start p,
.rtl .dept p,
.rtl .specialties-list,
.rtl .google-capcha,
.rtl .doctors-list-all,
.rtl .float-right-rtl,
.rtl .doctor_details .container,
.rtl .specialties .container,
.rtl .doctors-details .container
{
    direction: rtl;
}


.rtl .navbar-collapse{
    position: relative;
}

.rtl .navbar-nav{
    position: absolute;
    left: 0;
}

.rtl h1, .rtl h2, .rtl h3, .rtl h4, .rtl h5, .rtl h6,
.rtl p,
.rtl .nav-pills a,
.rtl .d-flex
{
    text-align: right;
}


.rtl .flaticon-cardiogram, .rtl .block-23 ul{
    float: right;
}


.rtl .flaticon-cardiogram{
    margin-left: 10px;
}



.rtl .slider-sec .item-content .text-over-slider h1 {
    font-family: 'Tajawal', sans-serif;
}



.rtl .ftco-services .tab-content .tab-pane .icon{
    text-align: right !important;
}
.rtl .align-right-rtl{
    text-align: right !important;
}

.rtl .block-23 ul li .icon, .ftco-navbar-light .navbar-nav > .nav-item.cta > a{
    float: left !important;
}

.rtl .pt-20-rtl{
    padding-top: 20px;
    text-align: right;
}
.rtl .block-23 ul li .icon, .block-23 ul li .text{
    float: right !important;
}
.rtl .show-more-style{
    margin-right: 10px;
}
.rtl .g-recaptcha{
    float: right;
    margin-bottom: 5%;
}
.rtl .contact-email{
    float: right;
}


.rtl .block-23 ul li, .rtl .block-23 ul li > a {
    text-align: right;
    display: block;
}


.rtl  .contact-info-footer li{
    margin-bottom: 40px !important;
}

.rtl .dept .text .doc{
    display: inline-block;
}

.rtl .author .name{
    margin-right: 13px;
}



.rtl .contact p{
    direction: rtl;
}

.rtl .contact .phone{
    display: inline-block;
    direction: ltr !important;
}


.rtl .contact-section .form-group .error-msg, .rtl .error-msg{
    text-align: right;
}


.rtl .text{
    display: inline-block;
    direction: ltr;
    margin-bottom: 13px;
}

.rtl .services-wrap{
    padding: 22px !important;
}


.rtl .subscribe-form .error-msg{
    text-align: center;

}



.rtl .table-title, .rtl .table-value {
    position: static;
}

.rtl .table-title{
    display: block;
    float: right !important;
}

.rtl .table-value{
    display: block;
    float: left !important;

}


.rtl .categories li, .sidelink li {
    display: block;
    clear: both;
    padding-bottom: 37px;
    border-bottom: 1px dotted #dee2e6;
    list-style: none;
}

.rtl .tagcloud div{
    text-align: right;
}

